# tarant-coffee

./: README.md  datamocker.js  netlify.toml  purchase_mock_data.json
backend/: .env.example  .gitignore  .prettierrc  Dockerfile  README.md  datamocker.js  deploy.sh  nodemon.json  package-lock.json  package.json  purchase_mock_data.json  tsconfig.json
backend/k8s/: manifest.yml
backend/src/: app.ts
backend/src/service/: data-lake.ts  event-hub.ts
data/: .gitignore  README.md  app.py  pyproject.toml
data/models/: item_month_avg.pickle
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  babel.config.js  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
frontend/src/: index.html  styles.ts
frontend/src/components/: App.tsx  Feedback.tsx  InfoLabel.tsx  LastMonthChart.tsx  Main.tsx  Product.tsx  ProductSelect.tsx  TodTrendChart.tsx
frontend/src/lib/: data.ts
