[tool.poetry]
name = "tarant-coffee-data"
version = "0.1.0"
description = ""
authors = ["xbexbex <petja.valkama@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
Flask = "^1.1.2"
black = "^20.8b1"
gunicorn = "^20.0.4"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
sklearn = "^0.0"
numpy = "^1.19.4"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
